# icon

./: .gitignore  Cargo.toml  Makefile
data/: icons.json
src/: component.rs  config.rs  convert.rs  init.rs  main.rs  make.rs
tests/: test_setup.rs
