[package]
name = "icon"
version = "0.0.1"
edition = "2021"
authors = ["ogty"]
repository = "https://github.com/ogty/icon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.91"
serde = { version = "1.0.126", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
